--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2018"
 name = "chrono"
 
 [features]
-default = ["clock", "std", "oldtime", "wasmbind"]
+default = ["clock", "std", "oldtime"]
 alloc = []
 libc = []
 std = []
@@ -38,10 +38,6 @@ criterion = { version = "0.4.0", optional = true }
 rkyv = {version = "0.7", optional = true}
 iana-time-zone = { version = "0.1.44", optional = true, features = ["fallback"] }
 arbitrary = { version = "1.0.0", features = ["derive"], optional = true }
-
-#[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
-#wasm-bindgen = { version = "0.2", optional = true }
-#js-sys = { version = "0.3", optional = true } # contains FFI bindings for the JS Date API
 
 
 [target.'cfg(windows)'.dependencies]
