--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2018"
 name = "chrono"
 
 [features]
-default = ["clock", "std", "oldtime", "wasmbind"]
+default = ["clock", "std", "oldtime"]
 alloc = []
 libc = []
 std = []
@@ -48,9 +48,6 @@ serde_derive = { version = "1", default-features = false }
 bincode = { version = "1.3.0" }
 num-iter = { version = "0.1.35", default-features = false }
 doc-comment = { version = "0.3" }
-
-[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
-wasm-bindgen-test = "0.3"
 
 [package.metadata.docs.rs]
 features = ["serde"]
