--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ libc = []
 std = []
 clock = ["std", "winapi", "iana-time-zone"]
 oldtime = ["time"]
-wasmbind = ["wasm-bindgen", "js-sys"]
 unstable-locales = ["pure-rust-locales", "alloc"]
 __internal_bench = ["criterion"]
 __doctest = []
@@ -39,6 +38,10 @@ rkyv = {version = "0.7", optional = true}
 iana-time-zone = { version = "0.1.44", optional = true, features = ["fallback"] }
 arbitrary = { version = "1.0.0", features = ["derive"], optional = true }
 
+[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true } # contains FFI bindings for the JS Date API
+
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.0", features = ["std", "minwinbase", "minwindef", "timezoneapi"], optional = true }
 
@@ -48,6 +51,9 @@ serde_derive = { version = "1", default-features = false }
 bincode = { version = "1.3.0" }
 num-iter = { version = "0.1.35", default-features = false }
 doc-comment = { version = "0.3" }
+
+[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
+wasm-bindgen-test = "0.3"
 
 [package.metadata.docs.rs]
 features = ["serde"]
