--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,13 @@ edition = "2018"
 name = "chrono"
 
 [features]
-default = ["clock", "std", "oldtime"]
+default = ["clock", "std", "oldtime", "wasmbind"]
 alloc = []
 libc = []
 std = []
 clock = ["std", "winapi", "iana-time-zone"]
 oldtime = ["time"]
+wasmbind = []
 unstable-locales = ["pure-rust-locales", "alloc"]
 __internal_bench = ["criterion"]
 __doctest = []
@@ -41,6 +42,7 @@ arbitrary = { version = "1.0.0", features = ["derive"], optional = true }
 [target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
 wasm-bindgen = { version = "0.2", optional = true }
 js-sys = { version = "0.3", optional = true } # contains FFI bindings for the JS Date API
+
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.0", features = ["std", "minwinbase", "minwindef", "timezoneapi"], optional = true }
